Pedro commit (revert)
Signed-off-by: vcardozo <victor.cardozo@artelys.com>